# explore-mofc-financials

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: index.html
docs/data/: mofc_990_expense_detail_manual_edits.csv  mofc_990_financials_manual_edits.csv  mofc_990_revenue_detail_manual_edits.csv  mofc_audit_food_volume.csv  mofc_efficiency_metrics.csv
src/mofc_financials/: __init__.py
src/mofc_financials/data_extraction/: compute_efficiency.py  extract_990.py  extract_990_detail.py  extract_audit.py  validate.py
tests/: test_compute_efficiency.py  test_extract_990.py  test_extract_990_detail.py  test_extract_audit.py  test_smoke_cross_validation.py  test_validate.py
